# simpletask

./: .gitignore  AGENTS.md  CHANGELOG.md  Earthfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-version-bump.yml  release.yml
.simpletask/: presets.yaml.example
cli/simpletask/: __init__.py
cli/simpletask/commands/: list.py  migrate.py  new.py  serve.py  show.py  status.py
cli/simpletask/commands/ai/: __init__.py  install.py  list.py
cli/simpletask/commands/audit/: __init__.py  add_run.py  dismissed.py  get.py  list.py
cli/simpletask/commands/constraint/: __init__.py  add.py  list.py  remove.py
cli/simpletask/commands/context/: __init__.py  remove.py  set.py  show.py
cli/simpletask/commands/criteria/: __init__.py  add.py  complete.py  list.py  remove.py  update.py
cli/simpletask/commands/defaults/: __init__.py  commands.py
cli/simpletask/commands/design/: __init__.py  remove.py  set.py  show.py
cli/simpletask/commands/fmt/: commands.py
cli/simpletask/commands/iteration/: __init__.py  add.py  get.py  list.py  remove.py
cli/simpletask/commands/note/: __init__.py  add.py  list.py  remove.py
cli/simpletask/commands/quality/: __init__.py  check.py  preset.py  set.py  show.py
cli/simpletask/commands/schema/: __init__.py  validate.py
cli/simpletask/commands/task/: __init__.py  add.py  helpers.py  list.py  remove.py  show.py  update.py
cli/simpletask/core/: __init__.py  ai_templates.py  audit_ops.py  constraint_ops.py  context_ops.py  criteria_ops.py  defaults.py  design_ops.py  git.py  iteration_ops.py  models.py  note_ops.py  presets.py  project.py  quality_checker.py  quality_ops.py  repair.py  task_file_ops.py  task_ops.py  validation.py  yaml_parser.py
cli/simpletask/mcp/: __init__.py  models.py  server.py
cli/simpletask/schema/: simpletask.schema.json
cli/simpletask/templates/copilot/: simpletask.audit.prompt.md  simpletask.implement.prompt.md  simpletask.plan.prompt.md  simpletask.review.prompt.md  simpletask.split.prompt.md
cli/simpletask/templates/gemini/: simpletask.audit.toml  simpletask.implement.toml  simpletask.plan.toml  simpletask.review.toml  simpletask.split.toml
cli/simpletask/templates/opencode/: simpletask.audit.md  simpletask.implement.md  simpletask.plan.md  simpletask.review.md  simpletask.split.md
cli/simpletask/templates/opencode/agents/: simpletask-plan.md
cli/simpletask/templates/pi/: simpletask-audit.md  simpletask-implement.md  simpletask-plan.md  simpletask-review.md  simpletask-split.md
cli/simpletask/templates/qwen/: simpletask.audit.md  simpletask.implement.md  simpletask.implement.toml  simpletask.plan.md  simpletask.plan.toml  simpletask.review.md  simpletask.review.toml  simpletask.split.md  simpletask.split.toml
cli/simpletask/templates/vibe/simpletask-audit/: SKILL.md
cli/simpletask/templates/vibe/simpletask-implement/: SKILL.md
cli/simpletask/utils/: __init__.py  console.py  datetime_format.py  output.py
commands/opencode/: simpletask.implement.md  simpletask.plan.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MCP.md  PRODUCT.md  SCHEMA.md  architecture.md  comparison-sdd-tools.md  splitting-patterns.md
schema/: README.md  example.yml  simpletask.schema.json
scripts/: commit-msg  install-hooks.sh  pre-commit  pre-push
tasks/: test-feature.yml
tests/: conftest.py
tests/integration/: test_ai_install_cli.py  test_branch_normalization.py  test_cli_json_output.py  test_mcp_batch.py  test_mcp_crud.py  test_show_json_complete.py  test_task_cli_fields.py
tests/unit/: test_ai_commands.py  test_ai_templates.py  test_audit_commands.py  test_audit_models.py  test_audit_ops.py  test_batch_tasks.py  test_constraint_ops.py  test_context_ops.py  test_criteria_ops.py  test_datetime_format.py  test_defaults.py  test_defaults_commands.py  test_design_commands.py  test_fmt_command.py  test_git.py  test_iteration_ops.py  test_mcp_audit.py  test_mcp_constraint_context_tools.py  test_mcp_defaults_target.py  test_mcp_models.py  test_mcp_note.py  test_mcp_quality_design_tools.py  test_mcp_tools.py  test_mcp_write_tools.py  test_migrate.py  test_models.py  test_normalize_branch_name.py  test_note_ops.py  test_output_format.py  test_presets.py  test_project.py  test_quality_checker.py  test_quality_commands.py  test_quality_models.py  test_show_command.py  test_task_ops.py  test_task_show_command.py  test_validation.py  test_yaml_parser.py
(+3 files in other folders)
