[project]
name = "simpletask"
version = "0.12.4"
description = "CLI tool for managing AI-friendly task definitions in branch-based development workflows"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "simpletask contributors"}
]
keywords = ["task", "development", "ai", "cli", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
simpletask = "simpletask:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/simpletask"]

[tool.hatch.build.targets.wheel.force-include]
"cli/simpletask/templates" = "simpletask/templates"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade - modernize Python code
    "SIM",  # flake8-simplify - simplify code
    "PIE",  # flake8-pie - misc lints
    "TRY",  # tryceratops - exception handling
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (black handles this)
    "TRY003",  # avoid specifying long messages outside exception class
    "SIM102",  # nested if statements - sometimes more readable
    "SIM117",  # nested with statements - sometimes more readable
    "TRY300",  # consider moving to else block - often less readable
    "TRY301",  # abstract raise to inner function - not always beneficial
    "C901",    # function too complex - pre-existing
    "RUF001",  # ambiguous unicode character - intentional (info icon)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
